--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".UserInfoActivity" />
-        <activity android:name=".Ch8Activity"></activity>
+        <activity android:name=".Ch8Activity" />
+        <activity android:name=".AreaActivity" />
+        <activity android:name=".CityActivity" />
+        <activity android:name=".AddrActivity"></activity>
     </application>
 
 </manifest>
